--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="kakao">#FFFEE500</color>
+    <color name="primary">#FF0F77FF</color>
+    <color name="transparent">#00000000</color>
+    <color name="assistive">#FFA4A4A4</color>
+    <color name="border">#227C8189</color>
+
 </resources>
